@@ -13,8 +13,9 @@ graphhopper:
 
   # Enable turn restrictions for car or motorcycle.
   # graph.flag_encoders: car|turn_costs=true
-  
-  # add more data to every edge, currently used for path details only
+
+  # add more data to every edge
+  # used for path details and when road_environment is added and elevation is enabled then a tunnel and bridge interpolation is done, see #798
   # graph.encoded_values: surface,road_class,road_environment,road_access,car_max_speed
   # graph.bytes_for_flags: 8
 
